force-app/main/default/objects/Transaction__c/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <label>Authorization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>