force-app/main/default/objects/Transaction__c/fields/Card_Last_4__c.field-meta.xml
<CustomField>
    <fullName>Card_Last_4__c</fullName>
    <label>Card_Last_4</label>
    <length>20</length>
    <type>Text</type>
</CustomField>