force-app/main/default/objects/Transaction__c/fields/Credit_Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Name__c</fullName>
    <label>Credit_Card_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>