force-app/main/default/objects/Transaction__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <label>Payment_Request</label>
    <length>50</length>
    <type>Text</type>
</CustomField>