force-app/main/default/objects/Transaction__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason_Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>