force-app/main/default/objects/Transaction__c/fields/Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Reason_Text__c</fullName>
    <label>Reason_Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>