force-app/main/default/objects/Transaction__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <label>Recurring</label>
    <length>50</length>
    <type>Text</type>
</CustomField>