force-app/main/default/objects/Transaction__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <label>Response_Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>