force-app/main/default/objects/Transaction__c/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <label>Response_Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>