force-app/main/default/objects/Transaction__c/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <label>Response_Status</label>
    <type>TextArea</type>
</CustomField>