force-app/main/default/objects/Transaction__c/fields/Tokenization__c.field-meta.xml
<CustomField>
    <fullName>Tokenization__c</fullName>
    <label>Tokenization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>